--- a/wercker.yml
+++ b/wercker.yml
@@ -36,6 +36,42 @@ push-image-to-wcr:
         tag: $WERCKER_GIT_BRANCH-$WERCKER_GIT_COMMIT
         cmd: node /pipeline/source/app.js
 
+
+
+
+deploy:
+  steps:
+    - script:
+      name: generate and save kubeconfig
+      code: |
+        mkdir -p /root/.kube
+        echo "
+        apiVersion: v1
+        clusters:
+          - cluster:
+              insecure-skip-tls-verify: true
+              server: ${KUBERNETES_MASTER}
+            name: cluster-${KUBERNETES_CLUSTER_ID}
+        contexts:
+          - context:
+              cluster: cluster-${KUBERNETES_CLUSTER_ID}
+              user: user-${KUBERNETES_CLUSTER_ID}
+            name: context-${KUBERNETES_CLUSTER_ID}
+        current-context: context-${KUBERNETES_CLUSTER_ID}
+        kind: ""
+        users:
+          - name: user-${KUBERNETES_CLUSTER_ID}
+            user:
+              token: ${KUBERNETES_TOKEN}
+        " > /root/.kube/config
+    - script:
+      name: display kubeconfig
+      code: |
+        cat /root/.kube/config
+        
+ 
+
+
 deploy-app-to-oce:
   steps:
     - bash-template
