--- a/wercker.yml
+++ b/wercker.yml
@@ -89,7 +89,13 @@ deploy:
         token: $KUBERNETES_TOKEN
         insecure-skip-tls-verify: true
         command: create namespace ${NAMESPACE} 
- 
+
+        name: create namespace
+        server: $KUBERNETES_MASTER
+        token: $KUBERNETES_TOKEN
+        insecure-skip-tls-verify: true
+        command: create namespace ${NAMESPACES}
+  
    - kubectl:
         name: delete docker pull secret
         server: $KUBERNETES_MASTER
