--- a/wercker.yml
+++ b/wercker.yml
@@ -27,7 +27,7 @@ echoWerckerVars:
                 WERCKER_APPLICATION_OWNER_NAME: $WERCKER_APPLICATION_OWNER_NAME,
                 WERCKER_APPLICATION_NAME: $WERCKER_APPLICATION_NAME,
                 WERCKER_GIT_BRANCH-$WERCKER_GIT_COMMIT: $WERCKER_GIT_BRANCH-$WERCKER_GIT_COMMIT,
-                WERCKER_ROOT: $WERCKER_ROOT""
+                WERCKER_ROOT: $WERCKER_ROOT"
 
 
 push-image-to-wcr:
