--- a/wercker.yml
+++ b/wercker.yml
@@ -87,7 +87,7 @@ deploy:
         server: $KUBERNETES_MASTER
         token: $KUBERNETES_TOKEN
         insecure-skip-tls-verify: true
-        command: create namespace ${NAMESPACES}
+        command: create namespace ${NAMESPACE}
   
    - kubectl:
         name: delete docker pull secret
