--- a/wercker.yml
+++ b/wercker.yml
@@ -69,3 +69,11 @@ deploy:
       code: |
         cat /root/.kube/config
  
+    - kubectl:
+        name: create namespace
+        server: $KUBERNETES_MASTER
+        token: $KUBERNETES_TOKEN
+        insecure-skip-tls-verify: true
+        command: create namespace ${NAMESPACE}
+  
+ 
