--- a/wercker.yml
+++ b/wercker.yml
@@ -77,3 +77,12 @@ deploy:
         command: create namespace ${NAMESPACE}
   
  
+   - kubectl:
+        name: delete docker pull secret
+        server: $KUBERNETES_MASTER
+        token: $KUBERNETES_TOKEN
+        insecure-skip-tls-verify: true
+        command: delete secret -n ${NAMESPACE} ${DOCKER_SECRET_NAME} --ignore-not-found
+        
+
+
