--- a/wercker.yml
+++ b/wercker.yml
@@ -75,7 +75,7 @@ deploy:
         server: $KUBERNETES_MASTER
         token: $KUBERNETES_TOKEN
         insecure-skip-tls-verify: true
-        command: create namespace ${NAMESPACE}
+        command: apply -f namespace.yml 
  
     - kubectl:
         name: delete docker pull secret
