--- a/wercker.yml
+++ b/wercker.yml
@@ -92,7 +92,7 @@ deploy:
         command: create secret -n ${NAMESPACE} docker-registry ${DOCKER_SECRET_NAME} --docker-server=${DOCKER_SERVER} --docker-username=${DOCKER_USER} --docker-password=${DOCKER_PASSWORD} --docker-email=${DOCKER_EMAIL}
         
     - script:
-        name: "Visualise Kubernetes deployment"
+        name: "echo kubernetes deployment file"
         code: cat install-job-deployment.yml
     
 
