--- a/wercker.yml
+++ b/wercker.yml
@@ -38,10 +38,10 @@ deploy:
 
 
         if ["$KUBERNETES_MASTER" != "" ] ; then
-            echo "KUBERNETES_MASTER = $KUBERNETES_MASTER"
-        else
-            echo "KUBERNETES_MASTER is a required workflow variable"
-            exit 1;
+            echo "KUBERNETES_MASTER = $KUBERNETES_MASTER" ;
+        #else 
+            #echo "KUBERNETES_MASTER is a required workflow variable" 
+            #exit 1;
         fi
 
 #KUBERNETES_CLUSTER_ID
