--- a/wercker.yml
+++ b/wercker.yml
@@ -25,7 +25,7 @@ echo-wercker-vars:
 
 test-custom-step:
   steps:
-    - jacob-lindholm/step-aura
+    - jacob-lindholm/step-aura:
         name: test the custom step
         insecure-skip-tls-verify: true
  
